# edgar-sentinel

./: .gitignore  LICENSE  Makefile  README.md  edgar-sentinel.yml  pyproject.toml  run_backtest.py
docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml
src/edgar_sentinel/: __init__.py  cli.py
src/edgar_sentinel/analyzers/: __init__.py  base.py  dictionary.py  llm.py  similarity.py
src/edgar_sentinel/api/: __init__.py  app.py  deps.py  routes.py  schemas.py
src/edgar_sentinel/backtest/: __init__.py  engine.py  metrics.py  portfolio.py  returns.py  universe.py
src/edgar_sentinel/core/: __init__.py  config.py  exceptions.py  models.py
src/edgar_sentinel/ingestion/: __init__.py  client.py  parser.py  store.py
src/edgar_sentinel/prices/: __init__.py  csv_adapter.py  models.py  provider.py  store.py  yahoo.py
src/edgar_sentinel/signals/: __init__.py  builder.py  composite.py  decay.py
tests/: conftest.py
tests/e2e/: conftest.py  test_validation.py
tests/fixtures/: sample_10k_mda.txt  sample_10k_risk.txt  sample_index.idx  sample_lm_dictionary.csv
tests/integration/: conftest.py  test_api.py  test_cli.py  test_pipeline.py  test_runner_pipeline.py
tests/unit/: test_api.py  test_base.py  test_cli.py  test_client.py  test_config.py  test_dictionary.py  test_engine.py  test_exceptions.py  test_llm.py  test_metrics.py  test_models.py  test_parser.py  test_portfolio.py  test_prices.py  test_returns.py  test_signal_builder.py  test_signal_composite.py  test_signal_decay.py  test_similarity.py  test_store.py  test_universe.py
